--- a/packages/tkmm/tkmm/profile.d/99-tkmm.conf
+++ b/packages/tkmm/tkmm/profile.d/99-tkmm.conf
@@ -5,4 +5,7 @@
 SOUND_CARD=$(aplay -L | sed -n 's/.*CARD=\([^,]*\).*/\1/p' | tail -n 1)
 echo $SOUND_CARD > /storage/.cache/sound_card
 
-apply-config
+# Remove old Tkmm binary from /storage on non-dev builds (can only be checked with the absence of git)
+if ! which git >/dev/null 2>&1; then
+    rm -rf /storage/.tkmm/Tkmm
+fi
