--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -39,7 +39,7 @@ jobs:
           DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean tkmm
           DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean samba
           DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean linux
-          DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean kernel
+          DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean busybox
           DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 scripts/clean initramfs
           THREADCOUNT=20 DISTRO=TKMM PROJECT=L4T DEVICE=Switch ARCH=aarch64 TKMM_VERSION=${{ github.ref_name }} make image
           mv target/* releases/
